@@ -380,7 +380,11 @@ val get_current_level: unit -> int
 val wrap_trace_gadt_instances: Env.t -> ('a -> 'b) -> 'a -> 'b
 val reset_reified_var_counter: unit -> unit
 
-val immediacy : Env.t -> type_expr -> Type_immediacy.t
+val approx_immediacy : Env.t -> type_expr -> Type_immediacy.t
+       (* Compute an over-approximation of the immediacy of a type *)
+val check_immediacy : Env.t -> as_:Type_immediacy.t -> type_expr ->
+  (unit, Type_immediacy.Violation.t) result
+       (* Verify that a type has a specified immediacy *)
 
 val maybe_pointer_type : Env.t -> type_expr -> bool
        (* True if type is possibly pointer, false if definitely not a pointer *)
