@@ -26,6 +26,9 @@ Working version
 
 ### Bug fixes:
 
+- #??: Expand aliases if necessary during @@immediate checks
+  (Stephen Dolan, review by ??)
+
 OCaml 4.12.0
 ------------
 
